fix(component-example): reduce z-index to be underneath modal

--- a/demo/js/components/ComponentExample/component-example.scss
+++ b/demo/js/components/ComponentExample/component-example.scss
@@ -33,7 +33,7 @@
     color: $color__navy-gray-6;
     font-size: 0.75rem;
     padding: 0.5rem 1rem;
-    z-index: 9999;
+    z-index: 8000;
   }
 
   &__view-full-render--link-only {
